# tools_obazl

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  HACKING.adoc  MODULE.bazel  Makefile  NOTES.md  README.adoc  README.md  WORKSPACE.bazel  WORKSPACE.bzl  dune_fields.txt
batch/: BUILD.bazel  batch.c
bazel/: BUILD.bazel  bazel_config.c
convert/: BUILD.bazel  convert.c  convert.scm  deploy.c  deploy_config.c  dune.c  xen_repl.c
coswitch/: BUILD.bazel  coswitch.c
coswitch/refresh/: BUILD.bazel
inspect/: BUILD.bazel  EXTRACT.bzl  INSPECT.bzl
lib/obazl/: BUILD.bazel  obazl.c
man/: BUILD.bazel  manpager.c
man/man1/: BUILD.bazel  new_workspace.1
new/: BUILD.bazel  README.adoc  TEMPLATE.bazelrc  TEMPLATE.workspace  coswitch.c  help.c  main.c  new.c  package.c  test.c  utils.c  workspace.c  xdg.c
new/bazel/: BUILD.bazel  emit_build_bazel.c  new_bazel.c
new/coswitch/: BUILD.bazel  coswitch.c
new/coswitch/bazel/: BUILD.bazel  emit_build_bazel.c  emit_ocaml_repo.c  emit_pkg_bindir.c  registry.c  utils.c
new/coswitch/templates/: BUILD.bazel  ocaml_bigarray.BUILD  ocaml_c_api.BUILD  ocaml_compiler-libs.BUILD  ocaml_dynlink.BUILD  ocaml_dynlink_alias.BUILD  ocaml_num.BUILD  ocaml_ocamldoc.BUILD  ocaml_runtime.BUILD  ocaml_str.BUILD  ocaml_str_alias.BUILD  ocaml_threads.BUILD  ocaml_threads_alias.BUILD  ocaml_unix.BUILD  ocaml_unix_alias.BUILD
new/coswitch/templates/compilation_mode/: BUILD.bazel
new/coswitch/templates/ocaml/: bigarray.BUILD
new/coswitch/templates/ocaml/extensions/: toolchains.bzl
new/coswitch/templates/toolchain/adapters/: local.BUILD  local.BUILD.mustache
new/coswitch/templates/toolchain/adapters/linux/: arm.BUILD
new/coswitch/templates/toolchain/adapters/macos/: x86_64.BUILD
new/coswitch/templates/toolchain/profiles/: profiles.BUILD
new/coswitch/templates/toolchain/selectors/: local.BUILD
new/module/: module.c
new/module/templates/: .bazelrc  .gitignore  BUILD.bazel  DEBUG.bazel  MODULE.bazel  root.BUILD
new/module/templates/.config/: coswitch_registry.bazelrc  overrides.bazelrc  platforms.bazelrc  toolchains.bazelrc  user.bazelrc
new/module/templates/config/: BUILD.bazel
new/module/templates/config/cc/: CONFIG.bzl
new/module/templates/config/compilation_mode/: BUILD.bazel
new/module/templates/config/trace/: BUILD.bazel
new/module/templates/test/: MODULE.bazel
new/ocaml/: BUILD.bazel  new_ocaml.c
new/package/: package.c
new/repo/templates/: BUILD.bazel  WORKSPACE.bzl
new/repo/templates/bzl/host/: BUILD.bazel
new/repo/templates/xdg/data/queries/: BUILD.bazel  obazlinfo.qry.bzl
new/templates/: .bazelrc  WORKSPACE.bazel  WORKSPACE.bzl  WORKSPACE.opam.bzl
new/templates/.config/: .gitignore  miblrc  user.bazelrc
new/templates/bzl/host/: BUILD.bazel
new/templates/bzl/profile/: BUILD.bazel
obazl/: BUILD.bazel  BUILD.bzl  obazl.c  starlark.scm
obazl/starlark/: aggregates.scm  attributes.scm  bash.scm  conversion.scm  emit.scm  executables.scm  filegroups.scm  genrule.scm  headers.scm  ppx.scm  predicates.scm  rules.scm  singletons.scm  starlark.scm  starlark_emit_rules.scm  templates.scm  tests.scm  tools.scm
ocamlobj/: BUILD.bazel  BUILD.bzl
repl/: BUILD.bazel  repl.c  xen_repl.c
runfiles/: BUILD.bazel  runfiles.c  test.c
script/: BUILD.bazel  script.c
sig/: BUILD.bazel
src/utils/: BUILD.bazel  utils.c
stardoc/: BUILD.bazel  rules.bzl
struct/: BUILD.bazel
templates/: .bazeliskrc  .bazelrc  BUILD.bazel  COSWITCH.bzl  WORKSPACE.bazel  WORKSPACE.bzl  WORKSPACE.opam.bzl
templates/.config/: .gitignore  dev.bazelrc  miblrc  mwe.bazelrc
templates/bzl/host/: BUILD.bazel
templates/bzl/profile/: BUILD.bazel
templates/bzl/profiles/: BUILD.bazel
test/: BUILD.bazel  libunits.scm  test.c  tests7.c  work.legacy.scm  work.scm  workexec.scm  worklibs.scm  workrules.scm  worktezos.scm
test/dune/a/: BUILD.bazel  a.opam  a2.ml  a2.mli  b.ml  dune  dune-project
test/dune/ppx/long/: BUILD.bazel  dune
test/dune/ppx/mwe/exe/: dune
test/dune/ppx/per_module/: dune
test/dune/ppx/pp_deps/exe/: dune
test/dune/ppx/ppx_args/: BUILD.bazel  dune
test/dune/ppx/ppx_data/multiple/: dune
test/dune/ppx/ppx_data/single/: BUILD.bazel
test/dune/stanzas/executable/flags/: BUILD.bazel
test/dune/stanzas/executable/main_dyad/: BUILD.bazel
test/dune/stanzas/executable/main_nodeps/: dune
test/dune/stanzas/executable/main_singleton/: BUILD.bazel  dune
test/dune/stanzas/executable/mwe/: BUILD.bazel  dune
test/dune/stanzas/executable/select/: dune
test/dune/stanzas/executables/: dune
test/dune/stanzas/multi/: dune
test/dune/stanzas/rule/locks/: IGNORED
test/dune/stanzas/rule/targets/: dune
test/dune/tezos/lib_clic/: BUILD.bazel  BUILD.mibl  dune.mibl
test/dune/tezos/lib_clic/test/: BUILD.bazel
test/dune/tezos/lib_clic/unix/: BUILD.bazel
test/dune/tezos/lib_requester/: BUILD.bazel
test/dune/tezos/lib_requester/test/: BUILD.bazel
test/dune/tezos/lib_stdlib_unix/: BUILD.bazel
test/dune/tezos/lib_test/: BUILD.bazel
test/dune/tezos/openapi/: BUILD.bazel
test/dune/tezos/proto_000_Ps9mPmXa/lib_client/: BUILD.bazel
test/dune/tezos/proto_000_Ps9mPmXa/lib_protocol/: BUILD.bazel  dune.inc
test/mibl/: libunits.scm
test/opam/: opam_deps.txt  short_deps.txt
test/rules/test1/: dune
test/s7/: work.scm
test/s7/git_version/: dune
test/s7/inline_tests/: PKG.mibl  PKG.s7  WS.mibl  WS.s7
test/s7/inline_tests/backend/: dune
test/s7/inline_tests/options/: .miblrc  dune
test/s7/inline_tests/ppx_assert/: BUILD.bazel  PKG.mibl  PKG.s7  ppx_assert_test.c
test/s7/inline_tests/ppx_assert/test/: PKG.mibl  PKG.s7  dune
test/s7/inline_tests/ppx_expect/: dune
test/s7/ppx_assert/: EXPECTED.mibl  EXPECTED.s7  PARSETREE.mibl  PARSETREE.s7  Test.c
test/s7/ppx_inline_test/: BUILD.bazel  ppx_assert_test.c
test/s7/run_sh/: dune
test/s7/variables/special/: .miblrc  README.adoc
test/templates/: BUILD.bazel
test/templates/xdg/data/queries/: obazlinfo.qry.bzl
tgt/: BUILD.bazel
toolchain/: BUILD.bazel  ostdlib.c
update/: BUILD.bazel  update.c
watch/: BUILD.bazel  watch.c
(+307 files in other folders)
