load("@cc_config//:MACROS.bzl", "repo_paths")

PROD_REPOS = [
    "@libs7//src:s7",
    "@dune_s7//src:dune_s7",

    "@gopt//src:gopt",
    "@findlibc//src:findlibc",
    "@opamc//src:opamc",
    "@liblogc//src:logc",
    "@runfiles//src:runfiles",
    "@semverc//src:semverc",
    "@uthash//src:uthash",
    "@xdgc//src:xdgc",
]

repo_paths(
    name = "repo_paths",
    repos = PROD_REPOS
)

repo_paths(
    name = "test_repo_paths",
    repos = PROD_REPOS + [
        "@unity//src:unity"
    ]
)
