load("@obazl_tools_cc//rules:module_profiles.bzl",
     "module_profiles")

PROD_REPOS = [
    "@libs7//src:s7",
    "@dune_s7//src:dune_s7",

    "@gopt//src:gopt",
    "@findlibc//src:findlibc",
    "@opamc//src:opamc",
    "@liblogc//src:logc",
    "@obazl_tools_cc//:version",
    "@runfiles//src:runfiles",
    "@semverc//src:semverc",
    "@uthash//src:uthash",
    "@xdgc//lib:xdgc",
]

module_profiles(
    name = "module_profiles",
    repos = PROD_REPOS
)

module_profiles(
    name = "test_module_profiles",
    repos = PROD_REPOS + [
        "@unity//src:unity"
    ]
)
