module(
    name = "obazl",
    version = "2.0.0",
    compatibility_level = 2,
)

## bcr deps:
bazel_dep(name = "platforms",      version = "0.0.8")
bazel_dep(name = "bazel_skylib",   version = "1.4.2")

## obazl deps:
bazel_dep(name = "obazl_tools_cc", version = "2.0.0")
bazel_dep(name = "rules_ocaml",    version = "2.1.0")

bazel_dep(name = "opamc",          version = "2.0.0")
bazel_dep(name = "findlibc",       version = "2.0.0")
bazel_dep(name = "xdgc",           version = "2.0.0")
bazel_dep(name = "semverc",        version = "2.0.0")

bazel_dep(name = "gopt",           version = "10.0.0.bzl.1")
bazel_dep(name = "inih",           version = "57.0.0")
bazel_dep(name = "lemon",          version = "3.42.0")
bazel_dep(name = "liblogc",        version = "2.0.0")
bazel_dep(name = "makeheaders",    version = "2.0.0")
bazel_dep(name = "re2c",           version = "3.1.0")
bazel_dep(name = "fswatch",        version = "1.17.1")

bazel_dep(name = "libs7",          version = "2.0.0")
bazel_dep(name = "dune_s7",        version = "2.0.0")

# bazel_dep(name = "runfiles",       version = "0.1.0")

# bazel_dep(name = "stardoc",        version = "0.6.2")

bazel_dep(name = "uthash",         version = "3.0.0")

bazel_dep(name = "unity",          version = "2.5.2.bzl.1",
          dev_dependency = True)

# bazel_dep(name = "mibl", version = "1.0.0")

# to add: stardoc
