workspace(name = "obazl_rules_ocaml")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#############
http_archive(
    name = "bazel_skylib",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
    ],
    sha256 = "97e70364e9249702246c0e9444bccdc4b847bed1eb03c5a3ece4f83dfe6abc44",
)
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

###############
git_repository(
    name = "io_bazel_stardoc",
    remote = "https://github.com/bazelbuild/stardoc.git",
    commit = "4378e9b6bb2831de7143580594782f538f461180",
    shallow_since = "1570829166 -0400"
)

load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")
stardoc_repositories()

################################################################
all_content = """filegroup(name = "all", srcs = glob(["**"]), visibility = ["//visibility:public"])"""

#############
http_archive(
    name = "makeheaders",
    urls = [
        "https://github.com/obazl/makeheaders/archive/57bae6cc7e88783b060acf711bc21f99d8380ca5.tar.gz"
    ],
    strip_prefix = "makeheaders-57bae6cc7e88783b060acf711bc21f99d8380ca5",
    sha256 = "83ef79d69c02348efd1f52a85fa10e9bd57333e89a23c2fe66a9b298c055d164"
)

#############
http_archive(
    name = "uthash",
    build_file_content = """
filegroup(name = "include", srcs = glob(["include/*.h"]), visibility = ["//visibility:public"])
    """,
    urls = [
        "https://github.com/troydhanson/uthash/archive/refs/tags/v2.3.0.tar.gz"
    ],
    strip_prefix = "uthash-2.3.0",
    sha256 = "e10382ab75518bad8319eb922ad04f907cb20cccb451a3aa980c9d005e661acc"
)

## https://github.com/mjsottile/sfsexp
http_archive(
    name = "sfsexp",
    build_file_content = all_content,
    urls = [
        "https://github.com/mjsottile/sfsexp/archive/ad589f9e6e0eca20345320e9c82a3aecc0a5c8aa.tar.gz"
    ],
    strip_prefix = "sfsexp-ad589f9e6e0eca20345320e9c82a3aecc0a5c8aa",
    sha256 = "5a5e70f9d4dffc53a943879a04eedcd458986ddd24eb413c572a4e04fb3682a2"
)

#############
http_archive(
    name = "libinih",
    # build_file_content = "exports_files(['ini.c', 'ini.h'])",
    build_file_content = """
filegroup(name = "srcs", srcs = ["ini.c", "ini.h"], visibility = ["//visibility:public"])
filegroup(name = "hdrs", srcs = ["ini.h"], visibility = ["//visibility:public"])""",
    urls = [
        "https://github.com/benhoyt/inih/archive/cb55f57d87ae840bd0f65dbe6bd22fa021a873a7.tar.gz"
    ],
    strip_prefix = "inih-cb55f57d87ae840bd0f65dbe6bd22fa021a873a7",
    sha256 = "26d05999033eef9e3abca2d4dbf3dc2e4a24335df51231b6faa093be06bb19d7"
)

# http_archive(
#     name = "lua",
#     # build_file_content = all_content,
#     build_file = "@//external/lua:BUILD.bazel",
#     urls = [
#         "https://www.lua.org/ftp/lua-5.4.3.tar.gz",
#     ],
#     strip_prefix = "lua-5.4.3",
#     sha256 = "f8612276169e3bfcbcfb8f226195bfc6e466fe13042f1076cbde92b7ec96bbfb"
# )

################################################################
## META parser tools

# load("//bzl:repos.bzl", "cc_fetch_repos")
load("//:WORKSPACE.bzl", "cc_fetch_repos")
cc_fetch_repos()

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()
