# workspace(name = "obazl")

# load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# load("//:WORKSPACE.bzl", "fetch_repos", "fetch_stardoc")
# fetch_repos()

# load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
# bazel_skylib_workspace()

# load("@mibl//:WORKSPACE.bzl", mibl_fetch_repos = "fetch_repos")
# mibl_fetch_repos()

# load("@libs7//:WORKSPACE.bzl", libs7_fetch_repos = "fetch_repos")
# libs7_fetch_repos()

# load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

# ## Assumption: build tools (make, autoconf, etc.) are already installed, do not build them
# rules_foreign_cc_dependencies(register_built_tools=False)

################################################################
## dev only
# load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")
# stardoc_repositories()
