load("@rules_cc//cc:defs.bzl", "cc_binary")

alias(
    name = "dune",
    actual = "//obazl"
)

##########
cc_binary(
    name  = "dunex",
    args  = ["-m", "bazel_main.scm"],
    data = [
        "//scm:srcs",
        "//scm/starlark:srcs"
    ],
    linkstatic = True,
    srcs  = ["dune.c", "dune.h"],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }) + select({
        "//bzl/host:linux": ["_XOPEN_SOURCE=500"], # strdup
        "//conditions:default":   []
    }) + [
        # "WITH_C_LOADER"
    ],
    copts = select({
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-std=c11",
        "-Wall",
        "-Wpedantic",
        "-Wno-unused-function",

        "-Iconvert",
        "-I$(GENDIR)/convert",
        "-Iexternal/obazl/convert",
        "-I$(GENDIR)/external/obazl/convert",

        # "-Iexternal/mibl/vendored/libinih",
        "-Iexternal/mibl/vendored/logc",
        "-Iexternal/mibl/vendored/uthash",

        "-Iexternal/mibl/src",
        "-I$(GENDIR)/external/mibl/src/hdrs", # mibl.h is generated

        "-Iexternal/libs7/src",
        "-Iexternal/libs7/vendored/linenoise",
        # "-Iexternal/mibl/libs7/vendored/linenoise",

        "-Iexternal/mibl/vendored/gopt"
    ],
    linkopts = select({
        "//bzl/host:macos": [],
        "//bzl/host:linux": [ "-Wl,-E", "-ldl"],
        "//conditions:default": {}
    }) + ["-lm"],
    deps = [
        "@libs7//src:s7",
        "@mibl//src:mibl",
        # "@mibl//vendored/libinih:inih",
        "@mibl//vendored/logc",
        "@mibl//vendored/uthash",
        "@mibl//vendored/gopt"
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        # "convert.c",
        "dune.c",
    ],
    outs = [
        # "convert.h",
        "dune.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location dune.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(execpath //vendored/makeheaders) \\",
        # "    $(location convert.c) \\",
        "    $(location dune.c);",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)

# ################################################################
# cc_binary(
#     name  = "deploy",
#     srcs  = [
#         "deploy.c", "deploy.h",
#         "deploy_config.c", "deploy_config.h",
#         # "//src:mibl_config.h",
#         # "//src:fs.h"
#     ],
#     defines = select({
#         "//bzl/host:debug": ["DEBUG_TRACE"],
#         "//conditions:default":   []
#     }) + select({
#         "//bzl/host:linux": ["_XOPEN_SOURCE=500"], # strdup
#         "//conditions:default":   []
#     }) + [
#         # "LD_LIBRARY_PATH=external/libs7/src"
#     ],
#     copts = select({
#         # strdup is non-standard, not supported on linux in strict c11 mode
#         "//bzl/host:macos": ["-std=c11"],
#         "//bzl/host:linux": ["-std=gnu11"],
#         "//conditions:default": ["-std=c11"],
#     }) + [
#         # "-pedantic-errors",
#         "-Wall",
#         "-Wno-unused-function",

#         "-I$(GENDIR)/convert",

#         "-I$(GENDIR)/external/mibl/src",

#         # "-I$(GENDIR)/deploy",
#         # "-I$(GENDIR)/external/mibl/deploy",

#         "-Iexternal/uthash/include",
#         "-Iexternal/libinih",
#         "-Iexternal/logc/src",

#         "-Iexternal/libs7/src",
#         "-Iexternal/mibl/libs7/src",
#     ],
#     data = [
#         "@mibl//src:mibl",  # libmibl.so
#         # "//repl", # so we can find it in MANIFEST
#         "@mibl//mibl:srcs",
#         "@mibl//mibl/dune:srcs",
#         "@mibl//mibl/meta:srcs",
#         "@mibl//mibl/opam:srcs",

#         "//scm:srcs",
#         "//scm/starlark:srcs"
#     ],
#     linkopts = select({
#         "//bzl/host:macos": [],
#         "//bzl/host:linux": [ "-Wl,-E", "-ldl"],
#         "//conditions:default": {}
#     }) + [
#         "-lm",
#     ],
#     deps = [
#         # "//repl",
#         "@mibl//src:mibl", # since we depend on its config files
#         "//external/libinih:inih",
#         # "@logc//:logc",
#         # "@libs7//src:s7",
#         # "@libs7//vendored/linenoise",
#     ],
#     visibility = ["//visibility:public"]
# )



