package(default_visibility = ["//visibility:public"])

load("//tools:INSPECT.bzl", "extract", "inspect")

## //ocamlobj is a label-typed build setting; its default value is the
## null module.  It must be overriden by passing a command-line arg:

## --@tools_obazl//ocamlobj=//pkg:tgt

inspect(
    name = "codeps",
    obj = "//tgt",
)

inspect(
    name = "import",
    obj = "//tgt",
)

inspect(
    name = "providers",
    obj = "//tgt",
)

inspect(
    name = "ppx",
    obj = "//tgt",
)

inspect(
    name = "src",
    obj = "//tgt",
)

inspect(
    name = "sig",
    obj = "//tgt",
)

inspect(
    name = "struct",
    obj = "//tgt",
)

