package(default_visibility = ["//visibility:public"])

load(":INSPECT.bzl", "extract", "inspect")

## //tgt is a label-typed build setting; its default value is the
## null module.  It must be overriden by passing a command-line arg:

## bazel run @obazl//inspect:providers --@obazl//tgt=//<pkg>:<tgt>

inspect(
    name = "codeps",
    obj = "//tgt",
)

inspect(
    name = "import",
    obj = "//tgt",
)

inspect(
    name = "providers",
    obj = "//tgt",
)

inspect(
    name = "ppx",
    obj = "//tgt",
    ##FIXME: support stop on target
)

inspect(
    name = "src",
    obj = "//tgt",
)

inspect(
    name = "sig",
    obj = "//tgt",
)

inspect(
    name = "struct",
    obj = "//tgt",
)

